<resources>
    <string name="app_name">StrikeCom</string>

    <!-- Main Menu -->
    <string name="play_button">Play</string>
    <string name="options_button">Options</string>
    <string name="exit_button">Exit</string>

    <!-- Select Menu -->
    <string name="sel_menu_description">Select Strike Base</string>
    <string name="sel_menu_prev">&lt;</string>
    <string name="sel_menu_next">&gt;</string>
    <string name="sel_menu_testDesc">TEST</string>
    <string name="sel_menu_nameLabel">Name:</string>
    <string name="sel_menu_startButton">START</string>
    <string name="sel_menu_mk1name">StrikeBase Mark. I</string>
    <string name="sel_menu_mk2name">StrikeBase Mark. II</string>
    <string name="sel_menu_mk3name">StrikeBase Mark. III</string>
    <string name="sel_menu_mk4name">StrikeBase Mark. IV</string>
    <string name="sel_menu_mk5name">StrikeBase Mark. V</string>
    <string name="sel_menu_locked">Locked</string>
    <string name="enter_name_toast">Please enter a name!</string>

    <!-- Options -->
    <string name="options_Options">Options</string>
    <string name="options_Music">Music</string>
    <string name="options_Sound">Sound</string>
    <string name="options_percentMusic">100%</string>
    <string name="options_percentSound">100%</string>
    <string name="options_Save">Save</string>
    <string name="options_exit">Exit</string>

    <!-- Sidebar -->
    <string name="minimap">MINIMAP</string>
    <string name="resource_1">Scrap</string>
    <string name="resource_2">Fuel</string>
    <string name="res1_defVal">0000</string>
    <string name="res2_defVal">0000</string>
    <string name="inventory_button">Inventory</string>
    <string name="shop_button">Depot</string>
    <string name="fuel_message">You ran out of fuel!</string>

    <!-- Inventory -->
    <string name="equip_button">Equip</string>
    <string name="unequip_button">Unequip</string>
    <string name="use_item">Use</string>
    <string name="cancel_button">Cancel</string>
    <string name="inventory_description">Inventory</string>
    <string name="turrets_selection">Turrets</string>
    <string name="upgrades_selection">Upgrades</string>

    <!-- Slots Dialog -->
    <string name="equipToSlot_button">Equip</string>
    <string name="backToInventory_button">Back</string>
    <string name="currentItem_label">Current item</string>
    <string name="newItem_label">New item</string>
    <string name="slots_info">Select an item to show information</string>

    <!-- Shop Dialog -->
    <string name="buy_button">Buy</string>
    <string name="player_scrap">Your scrap: </string>

    <!-- Quit Alert -->
    <string name="quit_alert">Exit the Game?</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>

    <!-- Files -->
    <string name="turretsFile">turrets</string>
    <string name="upgradesFile">upgrades</string>

    <!--AlertDialog-->
    <string name="alertDialogText">Do you want to exit the game?</string>
    <string name="alertYes">Yes</string>
    <string name="alertNo">No</string>

    <!--Game Over-->
    <string name="gameover_title">Game Over</string>
    <string name="score_label">Your score:</string>
    <string name="submit_button">Submit</string>
    <string name="gameover_news">New Strikebase model unlocked!</string>

    <string name="dev_mode_on">Dev Mode enabled, Everything unlocked.</string>

    <!-- Game Font-->
    <string name="game_font">fonts/Minecraft.ttf</string>

    <!-- Stats display -->
    <string name="stat_attack">attack:  </string>
    <string name="stat_rate">firerate:  </string>
    <string name="stat_range">range:  </string>
    <string name="stat_price">price:  </string>

    <!-- Turret Items -->
    <string-array
        name="Turrets" >
        <item
            >TURRET_MACHINEGUN;Machinegun;High caliber machinegun.</item>
        <item
            >TURRET_GATLING;Gatling gun;Multi-barreled machinegun with superior fire rate.</item>
        <item
            >TURRET_CANNON;Battle cannon;This cannon can punch a hole through most enemies.</item>
        <item
            >TURRET_HOWITZER;Howitzer;Slow but extremely powerful siege cannon.</item>
        <item
            >TURRET_PLASMA;Plasma cannon;It leaves nothing but molten slag with each shot.</item>
    </string-array>

    <!-- Upgrade Items -->
    <string-array name="Upgrades" >
        <item
            >ARMOUR_COMPOSITE;Composite armour;Highly increases your base endurance.</item>
        <item
            >ARMOUR_PLATE;Plated armour;Slightly increases your base endurance.</item>
        <item
            >ARMOUR_REACTIVE;Electric reactive armour;Reduces incoming damage.</item>
        <item
            >AI;Advanced A.I.;Makes your turrets quicker at aiming enemy vehicles.</item>
        <item
            >ENGINE_EFFICIENCY;Advanced power cells;Reduces fuel consumption.</item>
        <item
            >SCAVENGER;Scavenger;Increases the amount of scrap obtained by destroying enemy vehicles.</item>
    </string-array>

    <!-- FUEL -->
    <string name="FUEL">FUEL;250u fuel;250 units of hydrocarbon-based combustible used to power the base massive engine.</string>
    <!-- REPAIR -->
    <string name="REPAIR">REPAIR;100 HP;Metal recycled from the enemies. Enough material to restore 100 HP.</string>

</resources>
