<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/frame_retro_mk2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="100px"
        android:text="@string/gameover_title"
        android:layout_marginTop="10px"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/title"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:text="@string/score_label"
            android:id="@+id/textLabel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:id="@+id/textScore"
            android:text=""/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_retro_mk2"
            android:layout_marginLeft="40px"
            android:text="@string/exit_button"
            android:id="@+id/btnExit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_retro_mk2"
            android:layout_marginLeft="10px"
            android:text="@string/submit_button"
            android:id="@+id/btnSubmit"/>
    </LinearLayout>

</LinearLayout>