<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/select_bg"
              android:baselineAligned="false"
              android:padding="18dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sel_menu_description"
        android:id="@+id/textView"
        android:layout_weight="0"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/foreground_material_light"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sel_menu_prev"
            android:id="@+id/btnPrev"
            android:textSize="50dp"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk3"
            android:layout_marginRight="10dp"
            android:textColor="#EEE"/>

        <ImageView
            android:layout_width="260dp"
            android:layout_height="180dp"
            android:id="@+id/imgSelectedBase"
            android:src="@drawable/sbmk3"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sel_menu_next"
            android:id="@+id/btnNext"
            android:textSize="50dp"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk3"
            android:layout_marginLeft="10dp"
            android:textColor="#EEE"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sel_menu_mk3name"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sel_menu_nameLabel"
            android:id="@+id/textView3"
            android:textSize="28dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/foreground_material_light"
            android:layout_marginRight="12dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textName"
            android:layout_weight="0.95"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/sel_menu_startButton"
            android:id="@+id/btnStart"
            android:textSize="24dp"
            android:layout_gravity="center_vertical"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk3"
            android:layout_weight="0.05"
            android:textColor="#EEE"
            android:layout_marginLeft="80dp"/>
    </LinearLayout>
</LinearLayout>