<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity"
    android:gravity="bottom|right"
    android:background="@drawable/menu_bg"
    android:padding="24dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/exit_button"
        android:textColor="#EEE"
        android:id="@+id/btnExit"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/btn_retro_canv_mk2"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/bntOptions"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/options_button"
        android:textColor="#EEE"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/btn_retro_canv_mk2"
        android:layout_marginBottom="12dp"/>


    <Button
        android:id="@+id/btnPlay"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/play_button"
        android:textColor="#EEE"
        android:textSize="30dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/btn_retro_canv_mk2"
        />

</LinearLayout>
