<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/frame_retro_mk5"
              android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/turretSelectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turrets_selection"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk5"/>
        <Button
            android:id="@+id/upgradeSelectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrades_selection"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk5"/>

        <Space
            android:layout_width="200dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/scrap_64"
            android:id="@+id/scrap_icon"
            android:layout_marginTop="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerScrap"
            android:text="@string/res1_defVal"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/fuel_64"
            android:layout_marginLeft="20dp"
            android:id="@+id/fuel_icon"
            android:layout_marginTop="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerFuel"
            android:text="@string/res1_defVal"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/itemList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="260dp"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:background="@drawable/frame_retro_mk5"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:padding="12dp">
                <TextView
                    android:id="@+id/itemDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button
                android:id="@+id/inventoryBtn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/equip_button"
                android:background="@drawable/btn_retro_canv_mk5"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
            <Button
                android:id="@+id/inventoryBtn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/exit_button"
                android:background="@drawable/btn_retro_canv_mk5"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>