<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/frame_retro_mk1"
              android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/turretSelectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turrets_selection"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk1"
            android:textColor="#EEE"
            android:layout_marginRight="4dp"/>
        <Button
            android:id="@+id/upgradeSelectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrades_selection"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_retro_canv_mk1"
            android:textColor="#EEE"/>

        <Space
            android:layout_width="200dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/scrap_64"
            android:id="@+id/scrap_icon"
            android:layout_marginTop="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerScrap"
            android:text="@string/res1_defVal"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="#EEE"/>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/fuel_64"
            android:layout_marginLeft="20dp"
            android:id="@+id/fuel_icon"
            android:layout_marginTop="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerFuel"
            android:text="@string/res1_defVal"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="#EEE"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/itemList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:layout_marginRight="4dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_retro_mk1"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
                <TextView
                    android:id="@+id/itemDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:text="Select an item to display info"
                    android:textColor="#EEE"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/inventoryBtn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/equip_button"
                    android:background="@drawable/btn_retro_canv_mk1"
                    android:textColor="#EEE"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:clickable="false"/>

                <Button
                    android:id="@+id/inventoryBtn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/exit_button"
                    android:background="@drawable/btn_retro_canv_mk1"
                    android:textColor="#EEE"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>